<?xml version="1.0"?>
<package format="2">
  <name>cone_detection_si</name>
  <version>0.0.0</version>
  <description>The Cone Detection Simulation Interface package</description>

  <maintainer email="pknaprek@gmail.com">Patrik Knaperek</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sgtdv_msgs</depend>
  
</package>
