<?xml version="1.0"?>
<package format="2">
  <name>control_si</name>
  <version>0.0.0</version>
  <description>The Control Simulation Interface package</description>

  <maintainer email="pknaperek@gmail.com">Patrik Knaperek</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>fsd_common_msgs</depend>
  <depend>sgtdv_msgs</depend>

</package>
