<?xml version="1.0"?>
<package format="2">
  <name>fusion_sim_interface</name>
  <version>0.0.0</version>
  <description>The fusion_sim_interface package</description>

  <maintainer email="pknaprek@gmail.com">Patrik Knaperek</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sgtdv_msgs</depend>
  
</package>
