<?xml version="1.0"?>
<package format="2">
  <name>path_tracking_sim_interface</name>
  <version>0.0.0</version>
  <description>The path_tracking_sim_interface package</description>

  <maintainer email="pknaperek@gmail.com">Patrik Knaperek</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>fsd_common_msgs</depend>
  <depend>sgtdv_msgs</depend>

</package>
