<?xml version="1.0"?>
<package format="2">
  <name>slam_sim_interface</name>
  <version>0.0.0</version>
  <description>The slam_sim_interface package</description>

   <maintainer email="pknaperek@gmail.com">Patrik Knaperek</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>fsd_common_msgs</depend>
  <depend>roscpp</depend>
  <depend>sgtdv_msgs</depend>
  <depend>std_msgs</depend>

</package>
